# photo_frame

./: .gitignore  README.md  add_image_data.py  config.ini  credentials.json  face_detection.py  gen_txt_files.py  globals.py  image_modification.py  logging_config.py  montage_generator.py  pyproject.toml  quickstart.py  slideshow.py  slideshow_orig.py  slideshow_test.py  start_slideshow.py  start_slideshow.sh  utilities.py  utilities_orig.py
icons/: icon_links.txt
