[tool.poetry]
name = "photo_frame"
version = "1.0.0"
description = "photo frame"
authors = ["Parametricall <22248105+Parametricall@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^7.2.0"
requests = "^2.24.0"
google-api-python-client = "^1.12.3"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
