[tool.poetry]
name = "photo_frame"
version = "1.0.0"
description = "photo frame"
authors = ["Parametricall <22248105+Parametricall@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^7.2.0"
requests = "^2.24.0"
python-vlc = "^3.0.11115"
memory_profiler = "^0.57.0"
pymediainfo = "^4.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
